tests/expectations/compiler/structs/struct_access_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372003]: Expected type `i8` but type `u32` was found
    --> compiler-test:11:21
     |
  11 |         let x: i8 = s.f1;
     |                     ^^^^
"""]
